Add explanatory comment

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="container">
         <div id="exercise-display">Tap to start</div>
         <button id="next-button">Next Exercise</button>
+        <!-- TODO: Place to add your ideas here-->
     </div>
     <script src="script.js"></script>
 </body>
