Updating exercise list

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercise App</title>
+    <title>Exercise List</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <div id="exercise-display">Tap to start</div>
+        <div id="exercise-display"></div>
         <button id="next-button">Next Exercise</button>
-        <!-- TODO: Place to add your ideas here-->
+        <button id="restart-button" style="display: none;">Restart</button>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
