--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercise List</title>
+    <!-- Linking the CSS file -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Container to display the exercises -->
     <div class="container">
-        <div id="exercise-display"></div>
-        <button id="next-button">Next Exercise</button>
-        <button id="restart-button" style="display: none;">Restart</button>
+        <div id="exercise-display"></div> <!-- Exercise display area -->
+        <button id="next-button">Next Exercise</button> <!-- Next Exercise button -->
+        <button id="restart-button" style="display: none;">Restart</button> <!-- Restart button, hidden initially -->
     </div>
 
+    <!-- Linking the JS file at the end to ensure DOM is loaded -->
     <script src="script.js"></script>
 </body>
 </html>
